--- a/index.html
+++ b/index.html
@@ -47,7 +47,55 @@
 				Shop Now <i class="fas fa-chevron-right"></i>
 			</a>
 		</header>
-
+		<!-- Home cards 1 -->
+		<section class="home-cards">
+			<div>
+				<img src="img/card1.png" alt="">
+				<h3>
+					 New Surface Pro 7</h3>
+				<p>
+					World-class performance with more privacy, more productivity, and more value while you browse.
+				</p> 
+				<a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+			</div>
+			<div>
+				<img src="img/card2.png" alt="">
+				<h3>
+					 Xbox</h3>
+				<p>
+					World-class performance with more privacy, more productivity, and more value while you browse.
+				</p> 
+				<a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+			</div>
+			<div>
+				<img src="img/card3.png" alt="">
+				<h3>
+					 Office 360</h3>
+				<p>
+					World-class performance with more privacy, more productivity, and more value while you browse.
+				</p> 
+				<a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+			</div>
+			<div>
+				<img src="img/card4.png" alt="">
+				<h3>
+					 New Surface Pro 7</h3>
+				<p>
+					World-class performance with more privacy, more productivity, and more value while you browse.
+				</p> 
+				<a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+			</div>
+		</section>
+		<!-- Xbox section -->
+		<section class="xbox">
+			<div class="content">
+				<h2>Xbox Game Pass Ultimate</h2>
+				<p>Join the world’s premier gaming community. Xbox Live unites gamers across Xbox One and Windows 10, so you can play with friends and connect with a massive community of players.</p>
+				<a href="#" class="btn">
+					Join Now <i class="fas fa-chevron-right"></i>
+				</a>
+			</div>
+		</section>
 	</div>
 </body>
 </html>
