--- a/index.html
+++ b/index.html
@@ -1,101 +1,180 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-	<title>Microsoft-clone</title>
-</head>
-<body>
-	<div class="container">
-		<!-- Nav -->
-		<nav class="main-nav">
-			<img src="img/logo.png" alt="ms logo" class="logo">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+    <title>Microsoft-clone</title>
+  </head>
+  <body>
+    <div class="container">
+      <!-- Nav -->
+      <nav class="main-nav">
+        <img src="img/logo.png" alt="ms logo" class="logo" />
 
-			<ul class="main-menu">
-				<li><a href="#">Office</a></li>
-				<li><a href="#">Windows</a></li>
-				<li><a href="#">Surface</a></li>
-				<li><a href="#">Xbox</a></li>
-				<li><a href="#">Deals</a></li>
-				<li><a href="#">Support</a></li>
-			</ul>
+        <ul class="main-menu">
+          <li><a href="#">Office</a></li>
+          <li><a href="#">Windows</a></li>
+          <li><a href="#">Surface</a></li>
+          <li><a href="#">Xbox</a></li>
+          <li><a href="#">Deals</a></li>
+          <li><a href="#">Support</a></li>
+        </ul>
 
-			<ul class="right-menu">
-				<li>
-					<a href="#">
-						<i class="fas fa-search"></i>
-					</a>
-				</li>
-				<li>
-					<a href="#">
-						<i class="fas fa-shopping-cart"></i>
-					</a>
-				</li>
-			</ul>
-		</nav>
+        <ul class="right-menu">
+          <li>
+            <a href="#">
+              <i class="fas fa-search"></i>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <i class="fas fa-shopping-cart"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
 
-		<!-- Showcase -->
-		<header class="showcase">
-			<h2>Surface Deals</h2>
-			<p>
-				Select Surfaces are on sale now - save while supplies last
-			</p>
-			<a href="#" class="btn">
-				Shop Now <i class="fas fa-chevron-right"></i>
-			</a>
-		</header>
-		<!-- Home cards 1 -->
-		<section class="home-cards">
-			<div>
-				<img src="img/card1.png" alt="">
-				<h3>
-					 New Surface Pro 7</h3>
-				<p>
-					World-class performance with more privacy, more productivity, and more value while you browse.
-				</p> 
-				<a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
-			</div>
-			<div>
-				<img src="img/card2.png" alt="">
-				<h3>
-					 Xbox</h3>
-				<p>
-					World-class performance with more privacy, more productivity, and more value while you browse.
-				</p> 
-				<a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
-			</div>
-			<div>
-				<img src="img/card3.png" alt="">
-				<h3>
-					 Office 360</h3>
-				<p>
-					World-class performance with more privacy, more productivity, and more value while you browse.
-				</p> 
-				<a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
-			</div>
-			<div>
-				<img src="img/card4.png" alt="">
-				<h3>
-					 New Surface Pro 7</h3>
-				<p>
-					World-class performance with more privacy, more productivity, and more value while you browse.
-				</p> 
-				<a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
-			</div>
-		</section>
-		<!-- Xbox section -->
-		<section class="xbox">
-			<div class="content">
-				<h2>Xbox Game Pass Ultimate</h2>
-				<p>Join the world’s premier gaming community. Xbox Live unites gamers across Xbox One and Windows 10, so you can play with friends and connect with a massive community of players.</p>
+      <!-- Showcase -->
+      <header class="showcase">
+        <h2>Surface Deals</h2>
+        <p>
+          Select Surfaces are on sale now - save while supplies last
+        </p>
+        <a href="#" class="btn">
+          Shop Now <i class="fas fa-chevron-right"></i>
+        </a>
+      </header>
+      <!-- Home cards 1 -->
+      <section class="home-cards">
+        <div>
+          <img src="img/card1.png" alt="" />
+          <h3>
+            New Surface Pro 7
+          </h3>
+          <p>
+            World-class performance with more privacy, more productivity, and
+            more value while you browse.
+          </p>
+          <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div>
+          <img src="img/card2.png" alt="" />
+          <h3>
+            Xbox
+          </h3>
+          <p>
+            World-class performance with more privacy, more productivity, and
+            more value while you browse.
+          </p>
+          <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div>
+          <img src="img/card3.png" alt="" />
+          <h3>
+            Office 360
+          </h3>
+          <p>
+            World-class performance with more privacy, more productivity, and
+            more value while you browse.
+          </p>
+          <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div>
+          <img src="img/card4.png" alt="" />
+          <h3>
+            New Surface Pro 7
+          </h3>
+          <p>
+            World-class performance with more privacy, more productivity, and
+            more value while you browse.
+          </p>
+          <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+        </div>
+      </section>
+      <!-- Xbox section -->
+      <section class="xbox">
+        <div class="content">
+          <h2>Xbox Game Pass Ultimate</h2>
+          <p>
+            Join the world’s premier gaming community. Xbox Live unites gamers
+            across Xbox One and Windows 10, so you can play with friends and
+            connect with a massive community of players.
+          </p>
+          <a href="#" class="btn">
+            Join Now <i class="fas fa-chevron-right"></i>
+          </a>
+        </div>
+      </section>
+      <!-- Home cards 2 -->
+      <section class="home-cards">
+        <div>
+          <img src="img/card5.png" alt="" />
+          <h3>
+            New Surface Pro 7
+          </h3>
+          <p>
+            World-class performance with more privacy, more productivity, and
+            more value while you browse.
+          </p>
+          <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div>
+          <img src="img/card3.png" alt="" />
+          <h3>
+            Xbox
+          </h3>
+          <p>
+            World-class performance with more privacy, more productivity, and
+            more value while you browse.
+          </p>
+          <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div>
+          <img src="img/card7.png" alt="" />
+          <h3>
+            Office 360
+          </h3>
+          <p>
+            World-class performance with more privacy, more productivity, and
+            more value while you browse.
+          </p>
+          <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+        </div>
+        <div>
+          <img src="img/card8.png" alt="" />
+          <h3>
+            New Surface Pro 7
+          </h3>
+          <p>
+            World-class performance with more privacy, more productivity, and
+            more value while you browse.
+          </p>
+          <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+        </div>
+      </section>
+
+      <!-- Carbon section -->
+      <section class="carbon dark">
+        <div class="content">
+          <h2>Commiting to Carbon Negative</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut
+            consectetur sunt minima explicabo esse praesentium. Beatae .
+					</p>
+				</p>
 				<a href="#" class="btn">
-					Join Now <i class="fas fa-chevron-right"></i>
+					Learn More <i class="fas fa-chevron-right"></i>
 				</a>
-			</div>
-		</section>
-	</div>
-</body>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
